k8s/base/service-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-app-canary
  namespace: demo-app
  labels:
    app: demo-app
    app.kubernetes.io/name: demo-app
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app: demo-app
